# cartridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cartridge_backend.postman_collection.json  docker-compose.yml  env.example  pr-description.md
.cursor/rules/: cli-test-runs.mdc  readme-updates.mdc  unit-tests.mdc  venv-file.mdc
.github/: copilot-instructions.md
backend/: BACKEND_SUMMARY.md  Dockerfile  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_PROGRESS.md  README.md  TESTING.md  alembic.ini  ecommerce_scan.json  env.local.example  pyproject.toml  pytest.ini  test_ai_simple.py
backend/generated_dbt_project/: README.md
backend/generated_dbt_project/docs/: models.md
backend/generated_dbt_project/models/staging/: schema.yml  sources.yml
backend/scripts/: README-ecommerce-data.md  load-ecommerce-data.sh  run_tests.sh
backend/src/cartridge/: __init__.py  cli.py
backend/src/cartridge/ai/: base.py  factory.py  gemini_provider.py  openai_provider.py
backend/src/cartridge/api/: __init__.py  main.py
backend/src/cartridge/api/routes/: projects.py  scanner.py
backend/src/cartridge/core/: config.py  logging.py
backend/src/cartridge/dbt/: __init__.py  file_generator.py
backend/src/cartridge/models/: __init__.py  base.py  project.py
backend/src/cartridge/scanner/: base.py  factory.py  postgresql.py
backend/src/cartridge/tasks/: celery_app.py  generation_tasks.py  scan_tasks.py  test_tasks.py
backend/tests/: __init__.py  test_database_setup.py
backend/tests/integration/: test_background_tasks.py  test_end_to_end_workflows.py
backend/tests/performance/: test_api_performance.py
backend/tests/unit/: test_api.py  test_scanner_api.py  test_tasks.py
cartridge-init/: EXECUTION_PLANNER_QUICKSTART.md  EXECUTION_PLAN_IMPLEMENTATION.md  Makefile  README.md  TESTING.md  business_context.csv  env copy.example  example_multi_db_config.yml  generate_dbt.cast  multi_scan.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_business_context.csv  scan.json  test_bigquery_implementation.py  test_multi_db_config.yml
cartridge-init/alembic/: env.py
cartridge-init/docs/: bigquery-connector.md
cartridge-init/generated_dbt_project/: .gitignore  .user.yml  dbt_project.yml  package-lock.yml  packages.yml
cartridge-init/generated_dbt_project/models/marts/core/: schema.yml
cartridge-init/scripts/: README-ecommerce-data.md  run_tests.sh
cartridge-init/src/cartridge/: cli.py
cartridge-init/src/cartridge/ai/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py  prompts.py
cartridge-init/src/cartridge/api/routes/: __init__.py  health.py  projects.py  scanner.py
cartridge-init/src/cartridge/core/: __init__.py  database.py  logging.py
cartridge-init/src/cartridge/dbt/: project_generator.py  templates.py
cartridge-init/src/cartridge/models/: scan.py  user.py
cartridge-init/src/cartridge/portal/: __init__.py
cartridge-init/src/cartridge/scanner/: __init__.py  bigquery.py  factory.py
cartridge-init/src/cartridge/tasks/: __init__.py
cartridge-init/tests/: __init__.py  conftest.py  test_database_setup.py
cartridge-init/tests/integration/: test_bigquery_integration.py  test_end_to_end_workflows.py  test_multi_schema_integration.py  test_workflows.py
cartridge-init/tests/unit/: test_ai_providers.py  test_bigquery_connector.py  test_cli.py  test_config.py  test_execution_plan.py  test_generate_multi_format.py  test_models.py  test_multi_schema_scanning.py  test_projects_api.py  test_prompts.py
cartridge-warp/: .env.example  DEVELOPMENT.md  Dockerfile  Makefile  PLAN.md  README.md  SCHEMA_EVOLUTION_COMPLETE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt
cartridge-warp/docs/: README.md  architecture-diagrams.md  connection-flow-example.md  core-framework.md  development-dependencies.md  kubernetes-deployment.md  metadata-management-system.md  mongodb-connector.md  parallelism-and-filtering.md  postgresql-destination-connector.md  schema-evolution-engine.md
cartridge-warp/examples/: comprehensive-config.yaml  metadata_system_demo.py  mongodb-to-postgresql-single.yaml  mongodb_example.py  multi-schema-config.yaml  postgresql-destination-config.yaml  schema-evolution-config.yaml  single-schema-config.yaml
cartridge-warp/monitoring/: prometheus.yml
cartridge-warp/scripts/: init-mongodb.js
cartridge-warp/src/cartridge_warp/: __init__.py  cli.py
cartridge-warp/src/cartridge_warp/connectors/: __init__.py  base.py  factory.py  mongodb_source.py  postgresql_destination.py
cartridge-warp/src/cartridge_warp/core/: __init__.py  config.py  runner.py  schema_processor.py
cartridge-warp/src/cartridge_warp/metadata/: __init__.py  manager.py  models.py  schema.py
cartridge-warp/src/cartridge_warp/monitoring/: __init__.py  metrics.py
cartridge-warp/src/cartridge_warp/schema_evolution/: __init__.py  config.py  detector.py  engine.py  migrator.py  type_converter.py  types.py
cartridge-warp/tests/: conftest.py  test_config.py  test_core_framework.py
cartridge-warp/tests/integration/: __init__.py  test_metadata_integration.py  test_mongodb_integration.py  test_postgresql_destination_integration.py
cartridge-warp/tests/unit/: __init__.py  test_parallelism_and_filtering.py  test_postgresql_destination.py
cartridge-warp/tests/unit/connectors/: __init__.py  test_mongodb_source.py
cartridge-warp/tests/unit/metadata/: test_metadata_system.py
cartridge-warp/tests/unit/schema_evolution/: __init__.py  test_engine.py  test_integration.py
