[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartridge"
version = "0.1.1"
description = "AI-powered dbt model generator that scans data sources and creates optimized dbt models"
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "MIT"}
authors = [
    {name = "Cartridge Team", email = "team@cartridge.dev"},
]
keywords = ["dbt", "data-modeling", "ai", "sql", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core framework
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    
    # Database and ORM
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "psycopg2-binary",
    "greenlet",
    
    # Database connectors (only implemented ones)
    "google-cloud-bigquery",
    
    # AI providers
    "openai",
    "anthropic",
    "google-generativeai",
    
    # Task queue and caching
    "celery",
    "redis",
    
    # File handling and templates
    "jinja2",
    "pyyaml",
    
    # CLI utilities
    "click",
    "rich",
    "structlog",
    "python-multipart",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.4",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest-mock==3.12.0",
    "black==24.1.1",
    "ruff==0.2.1",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
    "psutil==5.9.8",
]

test = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.4",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest-mock==3.12.0",
    "httpx==0.26.0",
    "psutil==5.9.8",
]

docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.9",
    "mkdocstrings[python]==0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cartridge"
Documentation = "https://cartridge.readthedocs.io"
Repository = "https://github.com/yourusername/cartridge"
"Bug Tracker" = "https://github.com/yourusername/cartridge/issues"

[project.scripts]
cartridge = "cartridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cartridge*"]

[tool.setuptools.package-dir]
"" = "src"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration (replaces isort + flake8)
[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # function calls in argument defaults
    "C901", # complexity
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["cartridge"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]