[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartridge-warp"
version = "0.1.0"
description = "CDC streaming platform for real-time and batch data synchronization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cartridge Team", email = "team@cartridge.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    # Core framework
    "asyncio-mqtt>=0.16.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    
    # Database connectors
    "motor>=3.3.0",  # MongoDB async driver
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "aiomysql>=0.2.0",  # MySQL async driver
    
    # Schema and serialization
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # Monitoring and observability
    "prometheus-client>=0.19.0",
    
    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    
    # Utilities
    "tenacity>=8.2.0",  # Retry logic
    "croniter>=2.0.0",  # Cron scheduling
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "testcontainers>=3.7.0",  # Integration testing with containers
    
    # Code formatting and linting
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",  # Import sorting
    
    # Type checking
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",  # Type stubs for PyYAML
    "types-setuptools>=69.0.0",  # Type stubs for setuptools
    
    # Development tools
    "pre-commit>=3.5.0",
    "bump2version>=1.0.1",  # Version bumping
    "twine>=4.0.2",  # Package publishing
    
    # Documentation
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",  # Markdown parser for Sphinx
    
    # Debugging and profiling
    "ipython>=8.15.0",
    "ipdb>=0.13.13",  # Enhanced debugger
    "memory-profiler>=0.61.0",  # Memory profiling
    
    # Development utilities
    "watchdog>=3.0.0",  # File watching for auto-reload
    "python-dotenv>=1.0.0",  # Already in main deps but useful for dev
]
bigquery = [
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-bigquery-storage>=2.22.0",
]
test = [
    # Core testing framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-mock>=3.12.0",  # Mocking utilities
    "pytest-timeout>=2.2.0",  # Test timeouts
    "pytest-benchmark>=4.0.0",  # Performance benchmarking
    
    # Integration testing
    "testcontainers>=3.7.0",
    
    # Test data and factories
    "factory-boy>=3.3.0",  # Test data factories
    "faker>=20.1.0",  # Fake data generation
    
    # HTTP testing (for API endpoints)
    "httpx>=0.25.0",  # Async HTTP client for testing
    "respx>=0.20.0",  # HTTP request mocking
]
all = [
    # Include all optional dependencies for complete development setup
    "cartridge-warp[dev,test,bigquery]",
]

[project.urls]
Homepage = "https://github.com/naaico-tech/cartridge"
Repository = "https://github.com/naaico-tech/cartridge"
Documentation = "https://github.com/naaico-tech/cartridge/tree/main/cartridge-warp"
"Bug Tracker" = "https://github.com/naaico-tech/cartridge/issues"

[project.scripts]
cartridge-warp = "cartridge_warp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cartridge_warp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
asyncio_mode = "auto"
